Add new json in master config

--- a/master-config.json
+++ b/master-config.json
@@ -534,6 +534,13 @@
       "uniqueKeys": [
         "$.code"
       ]
+    },
+	"AllowedCountry": {
+      "masterName": "AllowedCountry",
+      "isStateLevel": true,
+      "uniqueKeys": [
+        "$.tenantId"
+      ]
     }
   },
   "PropertyTax": {
